# btleplug-services

./: .gitignore  Cargo.toml
btleplug-device-specs/: Cargo.toml
btleplug-device-specs-macros/: Cargo.toml
btleplug-device-specs-macros/src/: generation.rs  lib.rs  parse.rs
btleplug-device-specs/src/: lib.rs  services.rs
