[package]
name = "btleplug-device-specs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
btleplug_device_specs_macros = {path = "../btleplug-device-specs-macros"}
uuid = "*"
tokio = {version = "*", features = ["sync"]}